Swagger setup for auth token
