# controllers/UserController.ts
@@ -1,4 +1,14 @@
-import { Body, Controller, Post, Route, SuccessResponse,Get, Path  } from "tsoa";
+import {
+  Body,
+  Controller,
+  Post,
+  Route,
+  SuccessResponse,
+  Get,
+  Path,
+  Security,
+  Request,
+} from "tsoa";
 
 import { HttpError } from "../services/HttpError";
 import { db } from "../db";
@@ -15,16 +25,21 @@ interface UserRequest {
 export class UsersController extends Controller {
   @SuccessResponse("201", "Created")
   @Post()
+  @Security("jwt")
   public async createUser(@Body() requestBody: UserRequest): Promise<void> {
     console.log("User data is 100% valid here:", requestBody);
     this.setStatus(201);
     return;
   }
-}
 
+  @Get("me")
+  @Security("jwt")
+  public async getMe(@Request() request: any) {
+    const userId = request.user.userId; // 'user' comes from the 'resolve(decoded)' in authentication.ts
+    console.log("Authenticated user ID:", userId);
+    return await db.select().from(users).where(eq(users.id, userId));
+  }
 
-@Route("users")
-export class UserController extends Controller {
   @Get("{id}")
   public async getUser(@Path() id: string): Promise<any> {
     const user = await db.select().from(users).where(eq(users.id, id)).limit(1);
@@ -36,4 +51,6 @@ export class UserController extends Controller {
 
     return user[0];
   }
+
+
 }
